<resources>

    <string name="app_name">Sky Compass</string>

    <string name="page_settings">Settings</string>
    <string name="page_about">About</string>
    <string name="page_display">Display</string>

    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>

    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="change">Change</string>

    <string name="title_objects">Body</string>
    <string name="title_view">View</string>
    <string name="title_sunrise">Sunrise</string>
    <string name="title_sunset">Sunset</string>

    <string name="current_location">Current location</string>

    <string name="use_system_time">Current time</string>
    <string name="use_system_date">Current date</string>
    <string name="use_system_location">My location</string>

    <string name="using_system_date">Current date</string>
    <string name="using_system_location">Current location</string>

    <string name="tap_to_change_time">Tap to change time</string>
    <string name="tap_to_change_date">Tap to change date</string>
    <string name="tap_to_change_location">Tap to change location</string>

    <string name="time_zone">Time zone (UTC+/-)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="text_search_hint">Time zone</string>
    <string name="use_dst">Use daylight savings?</string>
    <string name="use_dst_date">Using date</string>
    <string name="use_dst_always">Always</string>
    <string name="use_dst_never">Never</string>

    <string name="sun_moon">Sun &amp; Moon</string>
    <string name="planets">Planets</string>

    <string name="help">Help</string>
    <string name="info">Times</string>
    <string name="menu_compass">Compass</string>

    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="moon_rise">Moonrise</string>
    <string name="moon_set">Moonset</string>
    <string name="moon_phase">Moon Phase</string>

    <string name="help_content_intro">Sky Compass tracks the sun and moon positions in the sky - past, present and future.  Including:\n\n&#8226; Sun and Moon positions in the sky\n\n&#8226; Sunrise, sunset, moonrise and moonset times\n\n&#8226; Phases of the Moon\n\nFor entertainment and educational purposes only.</string>

    <string name="help_heading_date_time_location">Date, Time and Location</string>

    <string name="help_content_date_time_location">Location is specified in latitude and longitude.  You can change this by dragging the marker across the map or tap the button to automatically find your location.\n\nEnsure the time zone is set correctly for the current location.</string>

    <string name="help_heading_compass">Compass</string>

    <string name="help_content_compass">Use the compass to view where the Sun and Moon will be in the sky.  They are marked by yellow and grey circles.  They are positioned similarly to as if you are looking down on the earth.\n\nNorth, South, East and West are marked on the outer edge.\n\nTap the compass symbol in the toolbar to automatically orient the compass to point to magnetic North.</string>

    <string name="help_heading_night_mode">Night Mode</string>

    <string name="help_content_night_mode">Tap the moon icon in the toolbar to enter night mode and tap the sun icon to exit night mode.  Set night mode to automatically use the system default in settings found by tapping the gear icon.</string>

    <string name="help_more_info">More info</string>

</resources>