<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/background">

        <LinearLayout
            android:id="@+id/textViewsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="18sp"
                android:text="@string/help_content_intro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="25sp"
                android:text="@string/help_heading_date_time_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="18sp"
                android:text="@string/help_content_date_time_location" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="25sp"
                android:text="@string/help_heading_compass" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="18sp"
                android:text="@string/help_content_compass" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="25sp"
                android:text="@string/help_heading_night_mode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="18sp"
                android:text="@string/help_content_night_mode" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/text"
                android:textSize="18sp"
                android:text="@string/help_more_info" />

        </LinearLayout>

    </ScrollView>

</layout>