<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<!--    android:background="#FFFFFFFF">-->

    <TextView
        android:id="@+id/textView8"
        style="@style/text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/title_planets" />

    <TextView
        android:id="@+id/textView5"
        style="@style/text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/title_sunrise" />

    <TextView
        android:id="@+id/textView6"
        style="@style/text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/title_sunset" />

    <TextView
        android:id="@+id/textView7"
        style="@style/text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/title_view" />

</TableRow>