<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <TableLayout
            android:id="@+id/bodies_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--    android:background="#FFFFFFFF">-->

                <TextView
                    style="@style/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/title_planets" />

                <TextView
                    style="@style/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/title_sunrise" />

                <TextView
                    style="@style/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/title_sunset" />

                <TextView
                    style="@style/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/title_view" />

            </TableRow>

        </TableLayout>

    </ScrollView>

    <!--
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SelectBodiesFragment">

            <TextView
                android:id="@+id/textView6"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_planets"
                android:textSize="16sp"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/title_view"
                android:textSize="16sp"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bind:barrierDirection="top"
                bind:constraint_referenced_ids="scrollView" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/textView6">

                <LinearLayout
                    android:id="@+id/bodies_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    -->

</layout>